components/cost-management/staging/policies/.chainsaw-test/resources/expected-pod-matching.yaml
apiVersion: v1
kind: Pod
metadata:
  name: demo-pod
  namespace: ($namespace)
  labels:
    cost-center: ($cost_center)
    insights_cost_management_optimizations: "true"
